; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/openpromfs/extr_inode.c_property_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/openpromfs/extr_inode.c_property_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { %struct.seq_file* }
%struct.seq_file = type { i32 }
%struct.op_inode_info = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@op_inode_prop = common dso_local global i64 0, align 8
@property_op = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @property_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @property_open(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.op_inode_info*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.seq_file*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %8 = load %struct.inode*, %struct.inode** %3, align 8
  %9 = call %struct.op_inode_info* @OP_I(%struct.inode* %8)
  store %struct.op_inode_info* %9, %struct.op_inode_info** %5, align 8
  %10 = load %struct.op_inode_info*, %struct.op_inode_info** %5, align 8
  %11 = getelementptr inbounds %struct.op_inode_info, %struct.op_inode_info* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @op_inode_prop, align 8
  %14 = icmp ne i64 %12, %13
  %15 = zext i1 %14 to i32
  %16 = call i32 @BUG_ON(i32 %15)
  %17 = load %struct.file*, %struct.file** %4, align 8
  %18 = call i32 @seq_open(%struct.file* %17, i32* @property_op)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %31, label %21

21:                                               ; preds = %2
  %22 = load %struct.file*, %struct.file** %4, align 8
  %23 = getelementptr inbounds %struct.file, %struct.file* %22, i32 0, i32 0
  %24 = load %struct.seq_file*, %struct.seq_file** %23, align 8
  store %struct.seq_file* %24, %struct.seq_file** %7, align 8
  %25 = load %struct.op_inode_info*, %struct.op_inode_info** %5, align 8
  %26 = getelementptr inbounds %struct.op_inode_info, %struct.op_inode_info* %25, i32 0, i32 1
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.seq_file*, %struct.seq_file** %7, align 8
  %30 = getelementptr inbounds %struct.seq_file, %struct.seq_file* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  br label %31

31:                                               ; preds = %21, %2
  %32 = load i32, i32* %6, align 4
  ret i32 %32
}

declare dso_local %struct.op_inode_info* @OP_I(%struct.inode*) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @seq_open(%struct.file*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
